--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	"dependencies": {
 		"@clack/prompts": "^0.7.0",
 		"fs-extra": "^11.1.1",
-		"js-yaml": "^4.1.0"
+		"js-yaml": "^4.1.0",
+		"picocolors": "^1.0.0"
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
@@ -22,6 +23,12 @@
 		"type": "git",
 		"url": "https://github.com/doxigo/drupal-radix-cli.git"
 	},
-	"keywords": ["Drupal", "Radix", "CLI", "theme", "components"],
+	"keywords": [
+		"Drupal",
+		"Radix",
+		"CLI",
+		"theme",
+		"components"
+	],
 	"license": "MIT"
 }
